--- a/bin/install
+++ b/bin/install
@@ -5,7 +5,14 @@ set -euo pipefail
 current_script_path=${BASH_SOURCE[0]}
 plugin_dir=$(dirname "$(dirname "$current_script_path")")
 
-# shellcheck source=../lib/utils.bash
-source "${plugin_dir}/lib/utils.bash"
+if [ "$install_type" != "version" ]; then
+  fail "asdf-$TOOL_NAME supports release installs only"
+fi
 
-install_version "$ASDF_INSTALL_TYPE" "$ASDF_INSTALL_VERSION" "$ASDF_INSTALL_PATH"
+cd "$ASDF_DOWNLOAD_PATH/unix"
+./configure --prefix="$ASDF_INSTALL_PATH"
+make
+if ! make install; then
+  rm -rf "$ASDF_INSTALL_PATH"
+  fail "an error occurred installing"
+fi
