--- a/bin/install
+++ b/bin/install
@@ -2,8 +2,8 @@
 
 set -euo pipefail
 
-current_script_path=${BASH_SOURCE[0]}
-plugin_dir=$(dirname "$(dirname "$current_script_path")")
+# current_script_path=${BASH_SOURCE[0]}
+# plugin_dir=$(dirname "$(dirname "$current_script_path")")
 
 if [ "$ASDF_INSTALL_TYPE" != "version" ]; then
   fail "asdf-$TOOL_NAME supports release installs only"
